--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,10 @@
  * {
   box-sizing: border-box;
 }
+ .item-sold {
+  background-color: #eee;
+  color: gray;
+  padding: 10px 10px;
+  margin: 10px 10px;
+  border-radius: 10px 10px;
+ }
