--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# <div class="sold-out">
+      <% if @item.order != nil %><%# /商品が売れていない場合はこちらを表示 %>
+      <div class="sold-out">
         <span>Sold Out!!</span>
-      </div> %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      </div>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -25,14 +25,18 @@
 
     <%# ログインユーザー = 出品ユーザーの場合以下を表示 %>
     <% if user_signed_in? %>
-      <% if current_user.id == @item.user_id %> 
+      <%# 出品者かつ未購入品であれば、編集・削除を表示 %>
+      <% if current_user.id == @item.user_id && @item.order.nil? %> 
         <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %> 
         <p class='or-text'>or</p> 
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %> 
-      <% else %> 
-        <%# 商品が売れていない場合はこちらを表示しましょう %>
+    <%# 未購入品でない場合には、売り切れを表示 %>
+    <% elsif @item.order.present? %>
+      <span class="item-sold"> こちらの商品は売り切れました </span>
+     <%= link_to '別の商品を見る >>', root_path( anchor: 'pickup-ancor' ), class: 'btn btn-primary' %>
+    <% else %>
+    <%# 出品者以外かつ未購入品であれば、購入画面を表示 %>
         <%= link_to '購入画面に進む', item_orders_path(@item.id) ,class:"item-red-btn" %> 
-        <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
     <% end %>
 
